--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <p>Nothing here yet</p>p
+        <p>Nothing here yet</p>
 	</body>
 </html>
